<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="11dp"
    app:cardElevation="2dp"
    android:layout_margin="5sp"
    app:cardUseCompatPadding="true"
    android:background="@color/cardview_shadow_end_color">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/backgroundgradient"
        android:padding="15dp">
        <TextView
            android:id="@+id/viewitemnamename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:text="@string/item_name2" />


        <TextView
            android:id="@+id/viewitemname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="67dp"
            android:textColor="#ffff"
            android:layout_toEndOf="@+id/viewitemnamename"
            android:text="@string/textview" />

        <TextView
            android:id="@+id/viewitempricename"
            android:layout_marginTop="23dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:text="@string/item_price2" />

        <TextView
            android:id="@+id/viewitemprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="23dp"
            android:textColor="#ffff"
            android:layout_toEndOf="@+id/viewitempricename"
            android:text="@string/textview3" />

        <TextView
            android:id="@+id/viewitemcategoryname"
            android:layout_marginTop="43dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:text="@string/item_category3" />

        <TextView
            android:id="@+id/viewitemcategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="43dp"
            android:textColor="#ffff"
            android:layout_toEndOf="@+id/viewitemcategoryname"
            android:text="@string/textview5" />

        <TextView
            android:id="@+id/viewitembarcode"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:layout_below="@id/viewitemcategory"
            android:text="@string/bar_code_number" />

        <TextView
            android:id="@+id/viewitembarcoden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47dp"
            android:layout_marginTop="4dp"
            android:layout_below="@id/viewitemcategory"
            android:textColor="#ffff"
            android:layout_toEndOf="@+id/viewitemcategoryname"
            android:text="@string/textview5" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>