<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inven"
    android:orientation="vertical"
    tools:context=".RegisterActivity">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="#f23b5f"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="85dp"
        android:layout_marginTop="105dp"
        android:text="@string/product_details"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="449dp"
        android:layout_toStartOf="@+id/edititemname"
        android:text="@string/product_name"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edititemname"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="438dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#90A4AE"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginStart="3dp"
        android:layout_marginTop="-415dp"
        android:layout_marginEnd="4dp"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editcategory"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edititemname"
        android:layout_alignStart="@+id/edititemname"
        android:layout_alignEnd="@+id/edititemname"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-425dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/category1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#90A4AE"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editcategory"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="-7dp"
        android:text="@string/price"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editcategory"
        android:layout_alignStart="@+id/editcategory"
        android:layout_alignEnd="@+id/editcategory"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:hint="@string/rs"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#90A4AE"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginStart="0dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="-13dp"
        android:text="@string/barcode"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/barcodeview"
        android:layout_width="162dp"
        android:layout_height="22dp"
        android:layout_alignStart="@+id/editprice"
        android:layout_alignEnd="@+id/editprice"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="260dp"
        android:ems="10"
        android:hint="@string/bar_code_number"
        android:importantForAutofill="no"
        android:inputType="none"
        android:minHeight="48dp"
        android:textColorHint="#90A4AE"
        tools:ignore="LabelFor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/additembuttontodatabase"
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/button_shape"
        android:text="@string/add_item"
        tools:ignore="VisualLintButtonSize" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonscan"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barcodeview"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="115dp"
        android:layout_marginTop="-235dp"
        android:layout_marginEnd="114dp"
        android:background="@drawable/button_shape"
        android:text="@string/scan_bar_code"
        tools:ignore="VisualLintButtonSize" />


</RelativeLayout>