<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    android:background="@drawable/registerscreen">


    <EditText
        android:id="@+id/emailRegister"
        android:layout_width="308dp"
        android:layout_height="54dp"
        android:layout_alignStart="@+id/confirmPassword"
        android:layout_alignEnd="@+id/confirmPassword"
        android:layout_marginTop="270dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_account_user"
        android:ems="10"
        android:hint="@string/email_id5"
        android:inputType="textPersonName"
        android:padding="15sp"
        android:textColor="@color/colorAccent_login"
        android:textColorHint="#020202"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="308dp"
        android:layout_height="54dp"
        android:layout_alignBottom="@+id/emailRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="-70dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password5"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/colorAccent_login"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="308dp"
        android:layout_height="54dp"
        android:layout_alignBottom="@+id/passwordRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="-70dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
        android:ems="10"
        android:hint="@string/confirm_password5"
        android:inputType="textPassword"
        android:padding="15sp"
        android:textColor="@color/colorAccent_login"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        android:importantForAutofill="no" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/confirmPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-72dp"
        android:background="@drawable/button_shape"
        android:text="@string/register5"
        android:textAllCaps="false"
        android:textColor="#FFFF"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button_register"
        android:layout_marginStart="-19dp"
        android:layout_marginTop="550dp"
        android:gravity="center"
        android:text="@string/already_a_member"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_alignStart="@+id/button_register"
        android:layout_alignEnd="@+id/button_register"
        android:layout_marginStart="149dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="-34dp"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@color/colorAccent_login"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />


</RelativeLayout>